<resources>
    <string name="app_name">Marvel</string>

    <!-- ComicListFragment -->
    <string name="comic_list_title">Comics</string>
    <string name="comic_list_error_on_loading">There was an error when loading comics</string>

    <!-- ComicDetailsFragment -->
    <string name="comic_details_title">Details</string>
    <string name="comic_details_add">Buy</string>
    <string name="comic_details_summary">Summary</string>
    <string name="comic_details_creators">Creators</string>
    <string name="comic_details_pages">Pages: %s</string>
    <string name="comic_details_number">Number: #%s</string>
    <string name="comic_detauls_text_not_found">Not found</string>
    <string name="comic_details_error_not_found">Selected comic not found</string>
    <string name="comic_details_error_on_loading">There was an error when loading the selected comic</string>
    <string name="comic_details_error_on_add">Error when adding to shopping cart</string>

    <!-- ShoppingCartFragment -->
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="shopping_cart_total">Total (%s items)</string>
    <string name="shopping_cart_subtotal">Subtotal</string>
    <string name="shopping_cart_discount">Discount</string>
    <string name="shopping_cart_checkout">Proceed to checkout</string>
    <string name="shopping_cart_continue_shopping">Continue shopping</string>
    <string name="shopping_cart_delete">Delete</string>
    <string name="shopping_cart_text_empty">Your shopping cart is empty.</string>
    <string name="shopping_cart_discount_code">"Insert discount code "</string>
    <string name="shopping_cart_error_invalid_discount_code">Invalid discount code</string>

    <!-- CheckoutFragment -->
    <string name="checkout_title">Checkout</string>
    <string name="checkout_text_title">Order confirmation</string>
    <string name="checkout_order_number">Your order number is: %s</string>
    <string name="checkout_message_successful">Thank you for your purchase.</string>
    <string name="checkout_button_back">Back</string>
</resources>