<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.shoppingcart.ShoppingCartFragment"
    android:padding="12dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <TextView
        android:id="@+id/text_checkout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_text_title"
        android:textSize="26sp"
        android:textColor="@color/colorGrayAlt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/text_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_order_number"
        android:textSize="18sp"
        android:textColor="@color/colorGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_checkout_title"
        android:layout_marginTop="12dp"
        />


    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/checkout_message_successful"
        android:textSize="22sp"
        android:textColor="@color/colorGray"
        android:layout_marginTop="12dp"
        />


    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_red"
        android:text="@string/checkout_button_back"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:textColor="#fff"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>