<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.comicdetails.ComicDetailsFragment"
    android:padding="12dp"
    android:orientation="vertical"
    >

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/view_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/image_detail_cover"
            android:layout_width="168dp"
            android:layout_height="252dp"
            android:src="@drawable/placeholder"
            android:layout_gravity="left"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Spider-Man #001"
                    android:maxLines="2"
                    android:paddingTop="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorDarkGray"
                    />

                <TextView
                    android:id="@+id/text_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comic_details_number"
                    android:maxLines="1"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorGray"
                    />

                <TextView
                    android:id="@+id/text_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comic_details_pages"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@color/colorGray"
                    />


                <LinearLayout
                    android:id="@+id/view_rare"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/shape_oval_amber"
                    android:orientation="vertical"
                    android:padding="7dp"
                    android:layout_marginTop="8dp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_jewel"
                        />
                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/quantity_picker"/>

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_red"
                android:text="$ 1,99"
                android:textSize="18sp"
                android:textColor="#fff"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_add_shopping_cart"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="textEnd"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comic_details_creators"
        android:textSize="16sp"
        android:layout_marginTop="22dp"
        android:textColor="@color/colorGrayAlt"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_creators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorGray"
        android:textAlignment="textStart"
        android:text="Amy Chu, Zhou Liefen"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comic_details_summary"
        android:textSize="16sp"
        android:layout_marginTop="22dp"
        android:textColor="@color/colorGrayAlt"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorGray"
        android:textAlignment="textStart"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        />
    </LinearLayout>
</LinearLayout>